--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,11 @@
 /* CSS Document for Screens */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i');
 
-
+body{
+	font-family: 'Open Sans', sans-serif;
+	font-size  : 16px;
+	font-weight: 300;
+	color      : #555;
+	margin     : 0;
+	padding    : 0;
+}
