--- a/css/screen.css
+++ b/css/screen.css
@@ -1,11 +1,49 @@
 /* CSS Document for Screens */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i');
 
-body{
+body {
 	font-family: 'Open Sans', sans-serif;
 	font-size  : 16px;
 	font-weight: 300;
 	color      : #555;
 	margin     : 0;
 	padding    : 0;
+}
+
+/* Text */
+h1{
+	margin     : 0 0 1em 0;
+	font-size  : 2.8em;
+	font-weight: 700;
+}
+
+h2{
+	margin     : 0 0 .5em 0;
+	font-size  : 1.6em;
+	font-weight: 700;
+	line-height: 1.1em;
+}
+
+h3{
+	margin     : 0 0 .5em 0;
+	font-size  : 1.3em;
+	font-weight: 700;
+}
+
+h4{
+	margin     : 0 0 1.5em 0;
+	font-size  : 1em;
+	font-weight: 700;
+}
+
+p{
+	margin: 0 0 1em 0;
+}
+
+a{
+	color: #007eff;
+}
+
+a:visited{
+	color: #65b1ff;
 }
