--- a/css/screen.css
+++ b/css/screen.css
@@ -10,6 +10,12 @@ body {
 	padding    : 0;
 }
 
+#page{
+	max-width: 1200px;
+	margin   : 0 auto;
+	position : relative;
+}
+
 /* Text */
 h1{
 	margin     : 0 0 1em 0;
@@ -46,4 +52,11 @@ a{
 
 a:visited{
 	color: #65b1ff;
+}
+
+/* Header */
+header {
+	height    : 430px;
+	background: #cf0004 url(../images/banner_1200.jpg) no-repeat center bottom;
+	position  : relative;
 }
