Creating button Style

--- a/css/screen.css
+++ b/css/screen.css
@@ -54,6 +54,17 @@ a:visited{
 	color: #65b1ff;
 }
 
+a.btn {
+	font-size      : 1.2em;
+	text-decoration:  none;
+	color          : #fff;
+	border         : 1px solid #fff;
+	padding        : 4px 15px;
+	transition     : background-color .5s;
+}
+
+a.btn:hover { background-color: rgba(0, 0, 0, .3); }
+
 /* Header */
 header {
 	height    : 430px;
