--- a/css/screen.css
+++ b/css/screen.css
@@ -97,3 +97,27 @@ header div.hero h1 {
 	margin     : 0 0 30px 0;
 	color      : #fff;  
 }
+
+
+/* Section - All */
+section { padding: 0 30px; }
+
+/* Section - Main */
+section.main {
+	margin-top   : 20px;
+	margin-bottom: 30px;
+	padding      : 0;
+}
+
+section.main aside {
+	width     : 33%;
+	float     : left;
+	text-align: center;
+}
+
+section.main .content {
+	margin         : 15px;
+	background     : no-repeat center top;
+	background-size: 75px 75px;
+	padding-top    : 85px;
+}
