--- a/css/screen.css
+++ b/css/screen.css
@@ -138,3 +138,17 @@ section.main aside h3 a:hover { text-decoration: underline; }
 section.main aside .content.trending { background-image: url(../images/icon_star.svg); }
 section.main aside .content.find-it { background-image: url(../images/icon_marker.svg); }
 section.main aside .content.tools { background-image: url(../images/icon_gear.svg); }
+
+/* Section - Atmosphere */
+section.atmosphere {
+	background-color: #cc6633;
+	padding-top     : 30px;
+	padding-bottom  : 30px;
+	color           : #fff;
+}
+
+section.atmosphere article {
+	padding   : 0 20px 0 515px;
+	background: url(../images/photo_lounge.jpg) no-repeat 0 5px;
+	min-height: 220px; /* If it wouldn't exist the images height will be attached to the article contents height*/
+}
