--- a/css/screen.css
+++ b/css/screen.css
@@ -230,3 +230,23 @@ section.how-to blockquote p.credit::before {
 	left    : 0;
 	top     : -1px;
 }
+
+/* Footer */
+footer {
+	font-size: .8em;
+	margin   : 40px;
+	color    : #999;
+}
+/** It allows to the anchor element float along aside the other element.
+ *  This way the hipperlinks won't showed in separated lines because
+ *  the development has block properties
+ **/
+footer .content { display: inline; }
+/* It will push away from the copyright element*/
+footer a { 
+	margin-left: 30px;
+	color      : #777;
+}
+
+footer a:visited { color: #777; }
+footer a:hover { color: #000; }
