--- a/css/screen.css
+++ b/css/screen.css
@@ -357,3 +357,18 @@ nav > ul > li > a {
 	width  : auto;
 	padding: 10px 20px 15px 20px;
 }
+
+/* Media Queries */
+@media screen and (max-width: 1000px) {
+	h1 { font-size: 2.4em; }
+
+	/* Header */
+	header div.hero { left: 56%; }
+	header div.hero h1 { margin-bottom: 20px; }
+
+	/* Section - Atmosphere */
+	section.atmosphere article {
+		padding-left   : 400px;
+		background-size: 375px auto; /* Background image proportions: Width and height (auto)*/
+	}
+}
