--- a/css/screen.css
+++ b/css/screen.css
@@ -372,3 +372,33 @@ nav > ul > li > a {
 		background-size: 375px auto; /* Background image proportions: Width and height (auto)*/
 	}
 }
+
+@media screen and (max-width: 825px) {
+
+	h1 { font-size: 2.2em; }
+
+	/* Header */
+	header { 
+		height          : 300px;
+		background-image: url(../images/banner_825.jpg);
+	}
+
+	header div.hero {
+		top : 120px;
+		left: 48%;
+	}
+
+	/* Section -Atmosphere */
+	section.atmosphere article {
+		padding-left   : 325px;
+		background-size: 300px auto;
+	}
+
+	/* Section - How To */
+	section.how-to blockquote p.quote {
+		font-size  : 1.1em;
+		line-height: 1.2em;
+	}
+
+	section.how-to blockquote p.credit { font-size: .85em; }
+}
