--- a/css/screen.css
+++ b/css/screen.css
@@ -466,6 +466,27 @@ nav > ul > li > a {
 
 	header div.hero h1 { margin-bottom: 10px; }
 
+	/* Section - Main */
+	section.main aside {
+		width     : 100%; /* It takes the with of the parent section element */
+		float     : none; /* Original float of the page */
+		text-align: left;
+	}
+	/* Rearrange the svg main icons */
+	section.main aside div.content {
+		margin             : 8px 20px 8px 0;
+		padding            : 5px 0px 10px 85px;
+		background-size    : 50px 50px;
+		background-position: 20px 5px;/* put icons into the left side */
+	}
+
+	/* Section Atmosphere */
+	section.atmosphere article {
+		padding        : 160px 20px 0px 0px;
+		background-size: 300px auto;
+		min-height     : initial;
+	}
+
 	/* Navigation */
 	nav {
 		position        : static; /* it makes the navigation menu to the original html flow. It'll be downside of the page */
