--- a/css/screen.css
+++ b/css/screen.css
@@ -543,12 +543,25 @@ nav > ul > li > a {
 	nav ul li:hover { background: none; }
 
 	nav ul li a {
-		width: auto;
+		width  : auto;
 		display: block;
-		margin: 8px 10px;
+		margin : 8px 10px;
 		padding: 8px 15px;
-		border: 1px solid rbga(255, 255, 255, .25);
+		border : 1px solid rbga(255, 255, 255, .25);
 	}
 
 	nav ul li a:hover { background-color: rgba(255,255,255,.2); }
+
+	nav ul ul { background: none; }
+
+	nav ul ul li a { margin-left: 30px; }
+	nav ul ul ul li a { margin-left: 60px; }
+
+	nav a[aria-haspopup="true"]::after { display:none; }
+
+	/* Footer */
+	footer div.content {
+		display   : block; /* It will put the links to the bottom*/
+		margin-top: 15px;
+	}
 }
